kustomize/base/webapp-deploy-rolling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 6
  selector:
    matchLabels:
      run: webapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        run: webapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      containers:
      - image: bsctl/go-web-app:latest
        name: webapp
        ports:
        - name: root
          containerPort: 8080
          protocol: TCP
        - name: probe
          containerPort: 8080
          protocol: TCP
        - name: metrics
          containerPort: 9090
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 15
